--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,12 @@
   "trailingComma": "all",
   "printWidth": 80,
   "useTabs": false,
-  "endOfLine":"auto"
+  "endOfLine":"auto",
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "options": {
+      }
+    }
+  ]
 }
