--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@microsoft/sp-webpart-base": "1.18.2",
     "@pnp/sp": "^3.21.0",
     "@pnp/spfx-controls-react": "3.16.0",
+    "office-ui-fabric-core": "^11.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tslib": "2.3.1"
